--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' https://www.clarity.ms https://*.clarity.ms; connect-src 'self' https://www.clarity.ms https://*.clarity.ms; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://www.clarity.ms https://*.clarity.ms https://c.bing.com;"
+      content="default-src 'self'; script-src 'self' 'unsafe-eval' blob: https://www.clarity.ms https://*.clarity.ms; worker-src 'self' blob:; connect-src 'self' http://127.0.0.1:* https://www.clarity.ms https://*.clarity.ms; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://www.clarity.ms https://*.clarity.ms https://c.bing.com;"
     />
     <title>Copilot Skins</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
